--- a/LibraryManagement.Infrastructure/LibraryManagement.Infrastructure.csproj
+++ b/LibraryManagement.Infrastructure/LibraryManagement.Infrastructure.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LibraryManagement.Models\LibraryManagement.Domain.csproj" />
+    <ProjectReference Include="..\LibraryManagement.Domain\LibraryManagement.Domain.csproj" />
   </ItemGroup>
 
 </Project>
