--- a/LibraryManagement.Tests/LibraryManagement.Tests.csproj
+++ b/LibraryManagement.Tests/LibraryManagement.Tests.csproj
@@ -22,8 +22,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LibraryManagement.Application\LibraryManagement.Application.csproj" />
-    <ProjectReference Include="..\LibraryManagement.Models\LibraryManagement.Domain.csproj" />
-    <ProjectReference Include="..\LibraryManagement.Respository\LibraryManagement.Infrastructure.csproj" />
+    <ProjectReference Include="..\LibraryManagement.Domain\LibraryManagement.Domain.csproj" />
+    <ProjectReference Include="..\LibraryManagement.Infrastructure\LibraryManagement.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
