--- a/LibraryManagement.Console/appsettings.json
+++ b/LibraryManagement.Console/appsettings.json
@@ -1,21 +1,17 @@
 {
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "Using": ["Serilog.Sinks.File" ],
     "MinimumLevel": "Information",
     "WriteTo": [
-      { "Name": "Console" },
       {
         "Name": "File",
         "Args": {
-          "path": "Logs/log-.txt",
-          "rollingInterval": "Day"
+          "path": "Logs/log.txt",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] {Message}{NewLine}{Exception}"
         }
       }
-    ],
-    "Enrich": [ "FromLogContext", "WithThreadId" ],
-    "Properties": {
-      "Application": "LibraryManagementSystem"
-    }
+    ]
   }
 }
 
