--- a/LibraryManagement.Console/appsettings.json
+++ b/LibraryManagement.Console/appsettings.json
@@ -8,7 +8,7 @@
         "Args": {
           "path": "Logs/log.txt",
           "rollingInterval": "Day",
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] {Message}{NewLine}{Exception}"
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] [{SourceContext}] {Message}{NewLine}{Exception}"
         }
       }
     ]
